fixed body overflow and add overflow for search container

--- a/index.css
+++ b/index.css
@@ -84,12 +84,12 @@ ul {
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar {
   width: 5px;
-  background-color: #ffffff;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -129,6 +129,7 @@ body {
   background-color: var(--bg-main);
   margin: 0 auto;
   font-family: "Alkatra", cursive;
+  overflow: hidden;
 }
 
 input,
@@ -169,13 +170,17 @@ h2 {
 .left-bar {
   background-color: var(--bg-primary);
   width: 300px;
-  overflow: auto;
 }
 
 .left-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+#result-box {
+  overflow-y: auto;
+  height: calc(100vh - 290px);
 }
 
 form > input {
